--- a/sign.css
+++ b/sign.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('PICTURE/VVV.jpg'); /* Replace 'background.jpg' with the URL of your background image */
+    background-image: url('PICTURE/head - Copy.jpg'); /* Replace 'background.jpg' with the URL of your background image */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; /* Ensures that the background image remains fixed as the user scrolls */
